# tfbuddy

./: .dockerignore  .env.example  .gitignore  .tool-versions  Earthfile  Makefile  README.md  Tiltfile  go.mod  go.sum  index.html  index.yaml  main.go  mkdocs.yml  pyproject.toml  tilt_config.json
.github/: cr.yaml  ct.yaml
.github/workflows/: on_pull_request_docs.yaml  on_tag.yaml
.tilt/terraform/: Tiltfile
charts/tfbuddy/: Chart.yaml  values.yaml
cmd/: root.go  tfc.go  tfc_hook_handler.go  tfc_lock.go  tfc_run.go  tfc_status.go  tfc_unlock.go
docs/: architecture.md  contributing.md  index.md  requirements.txt  usage.md
hack/: gen-config-docs.go
hack/templates/: usage_config.tmpl
internal/config/: config.go  config_test.go  doc.go
internal/logging/: logging.go
internal/telemetry/: helpers.go  telemetry.go
localdev/: Dockerfile  Dockerfile.dlv
localdev/kind-cluster/: setup-kind-cluster.sh
localdev/manifests/: deployment.yaml  service.yaml
localdev/nats/: values.yaml
localdev/ngrok/: Tiltfile  deploy.yaml  job.yaml  kustomization.yaml  service.yaml
localdev/terraform/: main.tf  variables.tf
manifests/base/: deployment.yaml  kustomization.yaml  prometheus-rule.yaml  service-account.yaml  service-monitor.yaml  service.yaml  tfbuddy-server-pdb.yaml
pkg/: const.go
pkg/allow_list/: common.go  common_test.go  github.go  github_test.go  gitlab.go  gitlab_test.go  viper_test.go
pkg/comment_actions/: parsing.go  parsing_test.go
pkg/comment_formatter/: tfc_status_update.go  tfc_status_update_test.go
pkg/git/: git.go  git_repo.go  (+2 more)
(+127 files in other folders)
