[tool.poetry]
name = "docs"
version = "0.1.0"
description = "TF Buddy mkdocs"
authors = ["Zapier <opensource@zapier.com>"]
license = "Mozilla Public License 2.0"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
